Bug 144289 - OpenGL transitions not working with GTK3 VCL plugin
Summary: OpenGL transitions not working with GTK3 VCL plugin
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.0 target:7.2.1
Keywords: bibisected, bisected, regression
: 144333 (view as bug list)
Depends on:
Blocks: Impress-OpenGL GTK3
  Show dependency treegraph
 
Reported: 2021-09-04 00:52 UTC by Aron Budea
Modified: 2021-09-08 02:34 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Sample ODP (12.02 KB, application/vnd.oasis.opendocument.presentation)
2021-09-04 00:52 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2021-09-04 00:52:57 UTC
Created attachment 174768 [details]
Sample ODP

Open eg. attached presentation, which has a single slide with Ripple slide transition, and run a slideshow.

-> With GTK3 VCL plugin, no effect is shown. Fine with gen VCL plugin.

Based on the bibisect results below (from bibisect-linux-64-7.3), I presume all OpenGL transitions are affected. Adding CC: to Jan-Marek Glogowski.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=9ca30cd1d04cf39411c3ede687805c28ebe2a980
author		Jan-Marek Glogowski <glogow@fbihome.de>	2021-08-19 21:45:42 +0200
committer	Jan-Marek Glogowski <glogow@fbihome.de>	2021-08-20 09:55:38 +0200

VCL allow plugins to declare OpenGL support
Comment 1 Commit Notification 2021-09-04 13:34:56 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/50238bddf0e95169007cb90479cca86849a19007

tdf#144289 invert / disable default OpenGL support

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Aron Budea 2021-09-04 14:42:05 UTC
Verified, thanks for fixing, Jan-Marek!
LO 7.3.0.0.alpha0+ (50238bddf0e95169007cb90479cca86849a19007) / Ubuntu.
Comment 3 Commit Notification 2021-09-06 05:34:22 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/824433168363b7e969c9adca6b636e016a66edb2

tdf#144289 invert / disable default OpenGL support

It will be available in 7.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2021-09-06 11:16:07 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "libreoffice-7-2-1":

https://git.libreoffice.org/core/commit/c9c9ed3ac0bdf37e8f553cbc91ca68ea8fc9d8d0

tdf#144289 invert / disable default OpenGL support

It will be available in 7.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2021-09-06 16:05:33 UTC
*** Bug 144333 has been marked as a duplicate of this bug. ***