tdf#144289 invert / disable default OpenGL support

... and as a result drop setting a default in SalSvpInstance.

This is also more consistent: now you must explicitly implement
CreateOpenGLContext() and set "m_bSupportsOpenGL = true".

Change-Id: I591580bf134907213b8308e0843c278d2f470ed3